# ai.json

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-website.yml
chrome-extension/: background.js  manifest.json  popup.css  popup.html  popup.js  validator.js
docs/: README.md  error-handling.md  faq.md  how-ais-consume.md  quickstart.md  register-ai.md  security-best-practices.md  sign-requests.md
docs/platform-examples/: laravel.md  nodejs.md  shopify.md  woocommerce.md
examples/: blog.json  ecommerce.json  minimal.json  oauth.json  readonly.json  saas.json
libraries/node/: README.md  package-lock.json  package.json  tsconfig.json
libraries/php/: README.md  composer.json
libraries/python/: README.md  pyproject.toml
libraries/python/src/iajson/: __init__.py  client.py  discovery.py  exceptions.py
libraries/python/src/iajson/auth/: __init__.py  oauth.py  register.py  signer.py
schema/: ia.schema.json
schema/defs/: api.schema.json  auth.schema.json  capabilities.schema.json  common.schema.json  metadata.schema.json  security.schema.json  site.schema.json  webhooks.schema.json
validator/: README.md  package-lock.json  package.json  tsconfig.json
validator/src/: cli.ts  index.ts  loader.ts  reporter.ts  semantic.ts  server.ts  validator.ts
validator/tests/: validator.test.ts
website/: generator.html  index.html  validator.html
website/css/: style.css
website/js/: main.js
(+21 files in other folders)
