[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iajson"
version = "1.0.0"
description = "Python reference library for consuming ia.json files — the universal standard for AI interaction with websites"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ia.json Contributors" },
]
keywords = ["iajson", "ia.json", "ai", "agent", "api", "discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/Dandte/ai.json"
Repository = "https://github.com/Dandte/iajson-python"
Documentation = "https://github.com/Dandte/ai.json/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/iajson"]
